# openvino

./: GEMMA4_UNIFIED_ARCHITECTURE.md  GEMMA4_UNIFIED_QUICK_REFERENCE.md  GEMMA4_UNIFIED_README.md
docs/gemma4_unified/: GEMMA4_UNIFIED_CODE_EXAMPLES.md  GEMMA4_UNIFIED_STANDALONE_GUIDE.md
echo_ops/: __init__.py  benchmark_qwen3_5.py  export_qwen3_5_block.py  export_qwen3_5_text.py  export_qwen3_5_text_decode.py  ops.py  qwen3_5.py  reference.py  sweep_qwen3_5.py
samples/python/gated_deltanet/: test_gated_deltanet.py
scripts/: create_tiny_gemma4_unified.py
src/common/transformations/tests/op_conversions/: sdpa_to_paged_attention_test.cpp
src/core/src/: weight_sharing_util.cpp
src/plugins/intel_cpu/src/: compiled_model.cpp  graph.cpp  graph.h  weights_cache.hpp
src/plugins/intel_cpu/src/nodes/: input.h  tensoriterator.cpp  tensoriterator.h
study/qwen3/: .gitignore  DISCUSSION.md  MEMORY.md  README.md  benchmark_ops.py  build_kernels.sh  cb_chunking_test.py  compare_decode_mem.py  compare_kv.py  fused_conv1d.py  fused_linear_attn.py  genai_mem_compare.py  genai_vlm_pipeline.py  generate.py  kernels.c  kernels.py  l1_patch_sketch.txt  latest_memory.md  lm_head_slice.py  measure_fusion.py  memory_analysis.py  probe_compile_config.py  probe_memory.py  probe_structural.py  profile_decode.py  sweep_kernels.py  validate_fusion.py
study/qwen3/cpp_ext/: CMakeLists.txt  fused_causal_conv1d.cpp  fused_causal_conv1d.hpp  gated_delta_rule.cpp  gated_delta_rule.hpp  gated_delta_rule_v2.cpp  gated_delta_rule_v2.hpp  gated_delta_rule_v3.cpp  gated_delta_rule_v3.hpp  ov_extension.cpp  quantized_int8_sdpa.cpp  quantized_int8_sdpa.hpp  quantized_kv_cache.cpp  quantized_kv_cache.hpp  quantized_kv_cache_update.cpp  quantized_kv_cache_update.hpp
study/qwen3/data/: nanbeige_depth_mem.csv  nanbeige_patched_release.csv  nanbeige_with_reset.csv
study/qwen3/docs/: custom_extensions.md
study/qwen3/genai/: cb_chunking_test.py  genai_vlm_pipeline.py
study/qwen3/kernels/: build_kernels.sh  export_fused.py  fused_conv1d.py  fused_linear_attn.py  kernels.c  kernels.h  kernels.py  quantized_int8_sdpa.py  quantized_kv.py  quantized_matmul.py  reduce_ir.py  test_kernels.py
study/qwen3/openvino/: attribute_mem.py  bench_v2.py  bench_v3.py  benchmark_ops.py  compare_kv.py  generate.py  lowmem_infer.py  memory_analysis.py  profile_prefill.py  validate_fusion.py
study/qwen3/scripts/working/: attribute_mem.py  attribute_memory.py  bench_genai.py  bench_v2.py  bench_v3.py  chunk_sweep.py  collect_memory_data.py  depth_mem_sweep.py  depth_sweep.py  dump_linear_attn_ir.py  find_hot_slices.py  find_per_token_growth.py  find_slice_source.py  investigate_runtime.py  make_patched_chart.py  nanbeige_aggressive_release.py  nanbeige_aggressive_v2.py  nanbeige_depth_mem.py  nanbeige_patched_release_sweep.py  nanbeige_recompile_floor.py  nanbeige_reset_release.py  nanbeige_teardown.py  probe_manual_madvise.py  probe_mmap_check.py  probe_pa_path.py  probe_raw.py  probe_raw_breakdown.py  probe_raw_lowmem.py  probe_reduce_ir.py  probe_release_memory.py  probe_release_no_loop.py  release_throughput.py  run_bench_genai.sh  run_llama_bench.py  run_probe_pa_path.sh  run_probe_raw.sh  run_probe_raw_lowmem.sh
tests/: test_gemma4_unified.py
